commit revised code

--- a/pymaceuticals_by_YK.ipynb
+++ b/pymaceuticals_by_YK.ipynb
@@ -20,7 +20,9 @@
    "outputs": [],
    "source": [
     "#for above can I just click twice and write my analysis???????????????\n",
-    "#%matplotlib notebook when do I need???????????"
+    "\n",
+    "#%matplotlib notebook : This command enables interactive plots within the notebook\n",
+    "#%matplotlib notebook"
    ]
   },
   {
@@ -1950,7 +1952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1982,7 +1984,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2023,7 +2025,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -2202,7 +2204,7 @@
        "[1880 rows x 7 columns]"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2213,7 +2215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -2437,7 +2439,7 @@
        "24        36.065835  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2461,7 +2463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -2560,7 +2562,7 @@
        "[248 rows x 1 columns]"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2574,7 +2576,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -2753,7 +2755,7 @@
        "[248 rows x 7 columns]"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2770,31 +2772,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Capomulin:\n",
+      "Lower Quartile of Tumor Vol is: 32.37735684\n",
+      "Upper  Quartile of Tumor Vol is: 40.1592203\n",
+      "InterQuartile of Tumor Vol is: 7.781863460000004\n",
+      "The Median of Tumor Vol is: 38.1251644\n",
+      "Values below 20.70456164999999 could be outliers\n",
+      "Values above 51.83201549 could be outliers\n",
+      "\n",
+      "Ramicane:\n",
+      "Lower Quartile of Tumor Vol is: 31.56046955\n",
+      "Upper  Quartile of Tumor Vol is: 40.65900627\n",
+      "InterQuartile of Tumor Vol is: 9.098536719999998\n",
+      "The Median of Tumor Vol is: 36.56165229\n",
+      "Values below 17.912664470000003 could be outliers\n",
+      "Values above 54.30681135 could be outliers\n",
+      "\n",
+      "Infubinol:\n",
+      "Lower Quartile of Tumor Vol is: 54.04860769\n",
+      "Upper  Quartile of Tumor Vol is: 65.52574285\n",
+      "InterQuartile of Tumor Vol is: 11.477135160000003\n",
+      "The Median of Tumor Vol is: 60.16518046\n",
+      "Values below 36.83290494999999 could be outliers\n",
+      "Values above 82.74144559000001 could be outliers\n",
+      "\n",
+      "Ceftamin:\n",
+      "Lower Quartile of Tumor Vol is: 48.72207785\n",
+      "Upper  Quartile of Tumor Vol is: 64.29983003\n",
+      "InterQuartile of Tumor Vol is: 15.577752179999997\n",
+      "The Median of Tumor Vol is: 59.85195552\n",
+      "Values below 25.355449580000002 could be outliers\n",
+      "Values above 87.66645829999999 could be outliers\n"
+     ]
+    }
+   ],
    "source": [
     "# Put treatments into a list for for loop (and later for plot labels)\n",
-    "\n",
-    "\n",
     "# Create empty list to fill with tumor vol data (for plotting)\n",
+    "treatment = [\"Capomulin\", \"Ramicane\", \"Infubinol\", \"Ceftamin\"]\n",
     "\n",
+    "tumor_vol_cap = []\n",
+    "tumor_vol_ram = []\n",
+    "tumor_vol_inf = []\n",
+    "tumor_vol_cef = []\n",
     "\n",
-    "# Calculate the IQR and quantitatively determine if there are any potential outliers. \n",
+    "#-1 gives from first to last event???????????\n",
+    "for i in range(len(last_tumor_volume_df)-1):\n",
+    "    if last_tumor_volume_df.loc[i, \"Drug\"] == \"Capomulin\":\n",
+    "        tumor_vol_cap.append(last_tumor_volume_df.loc[i, \"Tumor Vol (mm3)\"])\n",
+    "    if last_tumor_volume_df.loc[i, \"Drug\"] == \"Ramicane\":\n",
+    "        tumor_vol_ram.append(last_tumor_volume_df.loc[i, \"Tumor Vol (mm3)\"])\n",
+    "    if last_tumor_volume_df.loc[i, \"Drug\"] == \"Infubinol\":\n",
+    "        tumor_vol_inf.append(last_tumor_volume_df.loc[i, \"Tumor Vol (mm3)\"])\n",
+    "    if last_tumor_volume_df.loc[i, \"Drug\"] == \"Ceftamin\":\n",
+    "        tumor_vol_cef.append(last_tumor_volume_df.loc[i, \"Tumor Vol (mm3)\"])\n",
     "\n",
+    "tumor_vol_list = [tumor_vol_cap, tumor_vol_ram, tumor_vol_inf, tumor_vol_cef]\n",
+    "\n",
+    "# Calculate the IQR and quantitatively determine if there are any potential outliers.\n",
+    "    # Locate the rows which contain mice on each drug and get the tumor volumes, add subset, \n",
+    "    # Determine outliers using upper and lower bounds\n",
+    "outlier_list = []\n",
+    "for i in range(len(tumor_vol_list)):\n",
+    "    quartiles = pd.Series(tumor_vol_list[i]).quantile([0.25,0.5,0.75])\n",
+    "    lowerq = quartiles[0.25]\n",
+    "    upperq = quartiles[0.75]\n",
+    "    iqr = upperq-lowerq\n",
+    "    print(f\"\\n{treatment[i]}:\")\n",
+    "    print(f\"Lower Quartile of Tumor Vol is: {lowerq}\")\n",
+    "    print(f\"Upper  Quartile of Tumor Vol is: {upperq}\")\n",
+    "    print(f\"InterQuartile of Tumor Vol is: {iqr}\")\n",
+    "    print(f\"The Median of Tumor Vol is: {quartiles[0.5]}\")\n",
     "    \n",
-    "    # Locate the rows which contain mice on each drug and get the tumor volumes\n",
+    "    lower_bound = lowerq - (1.5*iqr)\n",
+    "    upper_bound = upperq + (1.5*iqr)\n",
     "\n",
+    "    print(f\"Values below {lower_bound} could be outliers\")\n",
+    "    print(f\"Values above {upper_bound} could be outliers\")\n",
     "    \n",
-    "    # add subset \n",
-    "\n",
+    "    #and or or?????????????????????????\n",
     "    \n",
-    "    # Determine outliers using upper and lower bounds\n"
+    "#for j in range(len(tumor_vol_list[i])):\n",
+    "    #if (tumor_vol_list[i][j] < lower_bound) and (tumor_vol_list[i][j] > upper_bound):\n",
+    "    #outlier = tumor_vol_list[i][j]\n",
+    "    #outlier_list.append(outlier)\n",
+    "    #print(f\"The Outliers are {outlier_list}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2810,7 +2885,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2819,7 +2894,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2835,7 +2910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
