revised and commit

--- a/pymaceuticals_by_YK.ipynb
+++ b/pymaceuticals_by_YK.ipynb
@@ -19,10 +19,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#for above can I just click twice and write my analysis???????????????\n",
-    "\n",
-    "#%matplotlib notebook : This command enables interactive plots within the notebook\n",
-    "#%matplotlib notebook"
+    "#%matplotlib notebook : enables interactive plots within the notebook"
    ]
   },
   {
@@ -712,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -721,7 +718,7 @@
        "249"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -764,7 +761,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -978,7 +975,7 @@
        "920           62.570880                 2  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -993,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1184,7 +1181,7 @@
        "[1880 rows x 8 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1978,7 +1975,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -2762,7 +2759,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
